--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col">
-      <!-- SearchBox -->
+      <!-- SearchBoxx -->
       <shared-search-box
         (onDebounce)="searchByCountry($event)"
         [initialValue]="initialValue"
